--- a/css/style.css
+++ b/css/style.css
@@ -3,27 +3,40 @@
   padding: 0;
   box-sizing: border-box;
 }
-#price {
-  font-size: 55px;
-}
 body {
   width: 100%;
   height: 100vh;
-  background-color: 	#f7f7f7;
+  background-color: #f7f7f7;
+  font-family: 'Montserrat', sans-serif;
+  color: #f7f7f7
+}
+h2 {
+  font-weight: 400;
+  font-size: 25px;
+}
+#price {
+  font-size: 55px;
+  margin-top: 15px;
+  color:	#ffcc5c;
+  text-shadow: 0 0 5px black;
 }
 .container {
-  margin: 150px auto;
+  margin: 0 auto;
   width: 60%;
   min-width: 200px;
   max-width: 500px;
-  height: 200px;
+  height: 250px;
 }
 .container.custom {
+  position: relative;
+  top: 150px;
   display: flex;
+  text-align: center;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: 	#dfe3ee;
-  border: 2px solid #8b9dc3;
+  background-color:	#7289da;
+  border: 3px solid	#3b5998;
   border-radius: 10px;
+  box-shadow: 1px 1px 5px 	#424549;
 }
